[package]
name    = "cpuviz"
version = "0.0.0"
authors = ["Jacob Killelea <jkillelea@protonmail.ch>"]
# links   = "gtop-2.0"
# build   = "build.rs"

[features]
# default = ["generate_bindings"] # generate new bindings to libgtop2
default = [] # don't generate new bindings
generate_bindings = []

[dependencies]

[build-dependencies]
bindgen = "*"
